--- a/style.css
+++ b/style.css
@@ -17,6 +17,17 @@ body{
     background-size:cover;
 }
 
+h1{
+    margin:0;
+    padding:0;
+    position: absolute;
+    top: 200px;
+    color:white;
+    font-size: 6rem;
+    letter-spacing: 15px;
+    word-spacing: 15px;
+}
+
 .container {
     width:500px;
     background-color:white;
