First input option text and added button

--- a/style.css
+++ b/style.css
@@ -37,10 +37,10 @@ h1{
 }
 
 .container p{
-    margin:0 50px 0 50px;
+    margin:0 10px 0 10px;
     font-size: 1.4rem;
-    font-variant: small-caps;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
+    word-spacing:2px;
 }
 
 
