Starting with JS

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1{
     margin:0;
     padding:0;
     position: absolute;
-    top: 200px;
+    top: 5rem;
     color:white;
     font-size: 6rem;
     letter-spacing: 15px;
