--- a/style.css
+++ b/style.css
@@ -43,5 +43,22 @@ h1{
     word-spacing:2px;
 }
 
+.btn-grid {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 10px;
+    margin-top: 20px;
 
+}
 
+.option-btn{
+    background-color: rgb(127, 255, 212);
+    border: 1px solid rgb(2, 189, 17);
+    border-radius: 6px;
+    padding: 8px 10px;
+    font-size: 1.2rem;
+}
+
+.option-btn:hover{
+    border-color: black;
+}
