--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Marhey&family=Montserrat&display=swap');
+
+
 *, *::before, *::after {
     box-sizing: border-box;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Marhey', cursive;
 }
 
 
