--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 *, *::before, *::after {
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-    font-family: 'Marhey', cursive;
+    font-family: 'Marhey', 'cursive';
 }
 
 
@@ -18,7 +18,8 @@ body{
     height:100vh;
     background-color:#333;
     background-image:url(/images/diving.jpg);
-    background-size:cover;
+    background-size: cover;
+    background-position: bottom center;
 }
 
 h1{
