--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     width:100vw;
     height:100vh;
     background-color:#333;
-    background-image:url(/images/diving.jpg);
+    background-image:url("/images/diving.jpg");
     background-size: cover;
     background-position: bottom center;
 }
